--- a/store/templates/store/store_checkout.html
+++ b/store/templates/store/store_checkout.html
@@ -43,7 +43,8 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
-				<button id="make-payment">Make Payment</button>
+				<!--<button id="make-payment">Make Payment</button>-->
+				<div id="paypal-button-container"></div>
 			</div>
 			
 		</div>
@@ -67,9 +68,55 @@
 			</div>
 		</div>
 	</div>
+	<script src="https://www.paypal.com/sdk/js?client-id=AW2NPaBwaC8KVJ8bF4-2BfvMiWwmcZSzgE6uUBaK4aBiR59N5ZS4pFYzTJft-bWPoL-UXaxJOoA-ab5f"></script>
+
+	<script>
+		var total = "{{ order.get_cart_total|floatformat:2 }}"
+        // Render the PayPal button into #paypal-button-container
+        paypal.Buttons({
+
+			style: {
+				color: "blue",
+				shape: "rect"
+
+			},
+
+            // Set up the transaction
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: parseFloat(total).toFixed(2)
+                        }
+                    }]
+                });
+            },
+
+            // Finalize the transaction
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(orderData) {
+                    // Successful capture! For demo purposes:
+                    console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
+                    var transaction = orderData.purchase_units[0].payments.captures[0];
+                    alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');
+					submitFormData()
+
+                    // Replace the above to show a success message within this page, e.g.
+                    // const element = document.getElementById('paypal-button-container');
+                    // element.innerHTML = '';
+                    // element.innerHTML = '<h3>Thank you for your payment!</h3>';
+                    // Or go to another URL:  actions.redirect('thank_you.html');
+                });
+            }
+
+
+        }).render('#paypal-button-container');
+    </script>
+
+
 	<script type="text/javascript">
 		var shipping = '{{order.shipping}}'
-		var total = "{{ order.get_cart_total|floatformat:2 }}"
+		
 
 		if (shipping == 'False'){
 		 	document.getElementById('shipping-info').innerHTML = ''
@@ -94,9 +141,9 @@
 	    	document.getElementById('payment-info').classList.remove("hidden");
 	    })
 
-		document.getElementById('make-payment').addEventListener('click', function(e){
-	    	submitFormData()
-	    })
+		//document.getElementById('make-payment').addEventListener('click', function(e){
+	    	//submitFormData()
+	    //})
 
 	    function submitFormData(){
 	    	console.log('Payment button clicked')
